--- a/preloadScreenStyles.css
+++ b/preloadScreenStyles.css
@@ -1,7 +1,7 @@
 #preload-screen {
     width: 100vw; 
     height: 100vh; 
-    background: linear-gradient(135deg, #a494f5 0%, #735ce6 100%); 
+    background: linear-gradient(135deg, #eef4ff 0%, #70a2ff 100%); 
     display: flex; 
     flex-direction: column; 
     justify-content: center; 
