--- a/preloadScreenStyles.css
+++ b/preloadScreenStyles.css
@@ -14,7 +14,7 @@
     font-family:  -apple-system, system-ui, 'Helvetica Neue', Roboto, sans-serif;
     font-style: normal;
     letter-spacing: -0.013em;
-    color: #fff;
+    color: #000;
     font-weight: 500;
     font-size: 17px;
     line-height: 22px;
